cambio de colores porque en modo nocturno no se ve bien. Verificar que se vea bien en modo de dia

--- a/src/app/home/shared/pages/inventario/inventario.page.scss
+++ b/src/app/home/shared/pages/inventario/inventario.page.scss
@@ -50,7 +50,7 @@
 // }
 
 #registro {
-    color: #000000;
+    // color: #000000;
 }
 
 #registro-list {
@@ -60,13 +60,13 @@
 }
 
 #square {
-    background: #ffffff;
+    // background: #ffffff;
     border-radius: 5px;
 }
 
 #row-section {
-    background: #ffffff;
-    border-bottom: #e0e0e0 solid 0.2px;
+    // background: #ffffff;
+    // border-bottom: #e0e0e0 solid 0.2px;
     font-size: 11.5px;
     padding-left: 7px
 }
@@ -94,7 +94,7 @@ ion-item {
 }
 
 ion-col {
-    color: #030328;
+    // color: #030328;
 }
 
 h1 {
