--- a/src/app/home/shared/pages/rutas-form/rutas-form.page.scss
+++ b/src/app/home/shared/pages/rutas-form/rutas-form.page.scss
@@ -22,13 +22,13 @@ ion-title {
 }
 
 ion-content {
-    --background: #01010E;
+    // --background: #01010E;
 }
 
 ion-item {
     margin: 15px;
     border-radius: 30px;
-    --background: #f0f0f0;
+    // --background: #f0f0f0;
 }
 
 ion-input {
