--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -19,7 +19,7 @@
 }
 
 ion-content {
-    --background: #f0f0f0;
+    // --background: #f0f0f0;
 }
 
 ion-footer {
@@ -70,7 +70,7 @@ ion-icon {
 ion-item {
     margin-top: 7px;
     border-radius: 15px;
-    --background: #d0d0d0;
+    // --background: #d0d0d0;
 }
 
 ion-input {
