--- a/src/app/home/shared/pages/rutas-list/rutas-list.page.scss
+++ b/src/app/home/shared/pages/rutas-list/rutas-list.page.scss
@@ -40,7 +40,7 @@
 // }
 
 #registro {
-    color: #000000;
+    // color: #000000;
 }
 
 #registro-list {
@@ -50,13 +50,13 @@
 }
 
 #square {
-    background: #ffffff;
+    // background: #ffffff;
     border-radius: 5px;
 }
 
 #row-section {
-    background: #ffffff;
-    border-bottom: #e0e0e0 solid 0.2px;
+    // background: #ffffff;
+    // border-bottom: #e0e0e0 solid 0.2px;
     font-size: 11.5px;
     padding-left: 7px
 }
@@ -84,7 +84,7 @@ ion-item {
 }
 
 ion-col {
-    color: #030328;
+    // color: #030328;
 }
 
 h1 {
