Se agrega notificaciones con Onesignal y se borra consoles innecesarios

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,13 +4,13 @@
   <ion-tabs>
       <ion-tab-bar slot="bottom">
     
-        <ion-tab-button>
+        <ion-tab-button tab="servicios">
           <ion-icon name="build"></ion-icon>
         </ion-tab-button>
     
-        <!-- <ion-tab-button tab="chat-feed">
+        <ion-tab-button tab="chat-feed">
           <ion-icon name="chatbubbles"></ion-icon>
-        </ion-tab-button> -->
+        </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
 </ion-content>
