--- a/src/app/home/shared/pages/rutas-list/rutas-list.page.html
+++ b/src/app/home/shared/pages/rutas-list/rutas-list.page.html
@@ -8,47 +8,43 @@
 
 <ion-content>
   <div id="div-principal">
+    <ion-input class="search" type="text" name="filterRegistro" placeholder="Search..." [(ngModel)]="filterRegistro">
+    </ion-input>
 
-    <ion-input class="search" type="text" name="filterRegistro" placeholder="Search..." [(ngModel)]="filterRegistro"></ion-input>
-  
-      <ion-item>
-  
-        <ion-grid>
-  
-          <ion-card>
-            <ion-row id="registro-list">
-              <ion-col>Fecha</ion-col>
-              <ion-col>Creador de la ruta</ion-col>
-              <ion-col>Nombre cliente</ion-col>
-              <ion-col>Accion</ion-col>
-            </ion-row>
-          </ion-card>
-  
-          <ion-card>
-            <div id="square">
-              <div id="row-section" *ngFor="let registro of registroList | filter:filterRegistro | reverse; let i = index">
-                <ion-row  id="registro" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'">
-                  <ion-col class="col-element-date">{{registro.fecha}}</ion-col>
-                    <ion-col class="col-element">{{registro.userName}}</ion-col>
-                  <ion-col class="col-element">{{registro.nombreCliente}}</ion-col>
-                  <ion-col class="col-element">
-                    <ion-button (click)="registroService.populateForm(registro)" routerLink="/rutas-form">
-                      <ion-icon name="create-outline"></ion-icon>
-                    </ion-button>
-                    <ion-button *ngIf="isAdmin" (click)="onDelete(registro.$key)">
-                      <ion-icon name="trash-outline"></ion-icon>
-                    </ion-button>
-                  </ion-col>
-                </ion-row>
-              </div>
+    <ion-item>
+      <ion-grid>
+        <ion-card>
+          <ion-row id="registro-list">
+            <ion-col>Fecha</ion-col>
+            <ion-col>Creador de la ruta</ion-col>
+            <ion-col>Nombre cliente</ion-col>
+            <ion-col>Accion</ion-col>
+          </ion-row>
+        </ion-card>
+
+        <ion-card>
+          <div id="square">
+            <div id="row-section"
+              *ngFor="let registro of registroList | filter:filterRegistro | reverse; let i = index">
+              <ion-row id="registro" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'">
+                <ion-col class="col-element-date">{{registro.fecha}}</ion-col>
+                <ion-col class="col-element">{{registro.userName}}</ion-col>
+                <ion-col class="col-element">{{registro.nombreCliente}}</ion-col>
+                <ion-col class="col-element">
+                  <ion-button (click)="registroService.populateForm(registro)" routerLink="/rutas-form">
+                    <ion-icon name="create-outline"></ion-icon>
+                  </ion-button>
+                  <ion-button *ngIf="isAdmin" (click)="onDelete(registro.$key)">
+                    <ion-icon name="trash-outline"></ion-icon>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </div>
           </div>
-          </ion-card>
-          
-          
-        </ion-grid>
-      </ion-item>
-    </div>
-    
+        </ion-card>
+      </ion-grid>
+    </ion-item>
+  </div>
 </ion-content>
 
 <ion-footer>
