--- a/src/app/home/shared/pages/rutas-list/rutas-list.page.scss
+++ b/src/app/home/shared/pages/rutas-list/rutas-list.page.scss
@@ -15,12 +15,12 @@
 
 .col-element {
     font-size: 11.5px;
-    text-align: center;
+    // text-align: center;
 }
 
 .col-element-date {
     font-size: 9.5px;
-    text-align: center;
+    // text-align: center;
 }
 
 .add-icon {
