--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,10 +6,7 @@
     
         <ion-tab-button tab="servicios">
           <ion-icon name="build"></ion-icon>
-        </ion-tab-button>
-    
-        <ion-tab-button tab="chat-feed">
-          <ion-icon name="chatbubbles"></ion-icon>
+          Inicio
         </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
