--- a/src/app/home/shared/pages/rutas-form/rutas-form.page.html
+++ b/src/app/home/shared/pages/rutas-form/rutas-form.page.html
@@ -73,7 +73,6 @@
                   </ion-label>
                    <ion-input
                      required
-                      type="text"
                       name="cedulaCliente"
                       formControlName="cedulaCliente">
                    </ion-input>
@@ -109,12 +108,15 @@
                   </ion-label>
                    <ion-input
                      required
-                      type="text"
-                      name="direccion"
-                      formControlName="direccion">
+                     name="direccion"
+                     formControlName="direccion">
                    </ion-input>
                 </ion-item>
           
+                <ion-item>
+                  <input ngx-google-places-autocomplete [options]='options' #placesRef="ngx-places" (onAddressChange)="handleAddressChange($event)"/>
+                </ion-item>
+
                 <ion-item>
                   <ion-label position="floating">
                      Precio
