--- a/src/app/home/shared/pages/servicios/domesticos/domesticos.component.html
+++ b/src/app/home/shared/pages/servicios/domesticos/domesticos.component.html
@@ -61,3 +61,9 @@
     </form>
 
   </ion-card>
+
+  <ion-toggle [(ngModel)]="pruebaa.hola" (ionChange)="prueba()"></ion-toggle>
+
+  {{pruebaaa}}
+
+  <ion-input [(ngModel)]="mensaje" (input)="prueba(mensaje)"></ion-input>
