--- a/src/app/home/shared/pages/inventario-form/inventario-form.page.scss
+++ b/src/app/home/shared/pages/inventario-form/inventario-form.page.scss
@@ -8,31 +8,19 @@
     src: url('../../../../../assets/fonts/Poppins-Light.ttf');
 }
 
+* {
+    --font-family: Poppins-light;
+}
+
 .arrow-back {
     font-size: 24px;
     margin-left: 10px;
 }
 
+ion-toolbar {
+    --background: var(--ion-background-color);
+}
+
 ion-title {
     font-family: Poppins-Medium;
-}
-
-ion-content {
-    // --background: #01010E;
-}
-
-ion-item {
-    margin: 15px;
-    border-radius: 30px;
-    // --background: #f0f0f0;
-}
-
-ion-input {
-    font-family: Poppins-Light;
-}
-
-ion-button {
-    font-family: Poppins-Medium;
-
-    margin: 15px;
 }
