--- a/src/app/pages/servicios/domesticos/domesticos.component.scss
+++ b/src/app/pages/servicios/domesticos/domesticos.component.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: Poppins-Light;
-    src: url('../../../../../../assets/fonts/Poppins-Light.ttf');
+    src: url('../../../../assets/fonts/Poppins-Light.ttf');
 }
   
 @font-face {
     font-family: Poppins-Medium;
-    src: url('../../../../../../assets/fonts/Poppins-Medium.ttf');
+    src: url('../../../../assets/fonts/Poppins-Medium.ttf');
 }
 
 :root {
