--- a/src/app/home/shared/pages/rutas-form/rutas-form.page.html
+++ b/src/app/home/shared/pages/rutas-form/rutas-form.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-icon class="arrow-back" name="arrow-back-outline" routerLink="/mis-rutas" slot="start"></ion-icon>
+    <ion-icon class="arrow-back" name="arrow-back-outline" routerLink="/home/rutas" slot="start"></ion-icon>
     <!-- <img class="arrow-back" src="../../../../../assets//images/arrow-back-up.png" width="32px" routerLink="/rutas" slot="start"> -->
     <ion-title>Formulario de ruta</ion-title>
   </ion-toolbar>
@@ -11,131 +11,143 @@
     <ion-grid>
        <ion-row>
           <ion-col class="ion-align-items-center" class="ion-justify-content-center" size="12">
-           <form [formGroup]="registroService.form" (ngSubmit)="onSubmit()">
+            <form [formGroup]="registroService.form" (ngSubmit)="onSubmit()">
      
-              <ion-input
-                 type="hidden"
-                 formControlName ="$key">
-              </ion-input>
-
                <ion-input
-                  type="hidden"
-                  formControlName ="userUid"
-                  [(ngModel)]="userUid">
+                type="hidden"
+                formControlName ="$key">
                </ion-input>
 
                <ion-input
-                  type="hidden"
-                  formControlName ="userName"
-                  [(ngModel)]="userName">
+                type="hidden"
+                formControlName ="userUid"
+                [(ngModel)]="userUid">
                </ion-input>
- 
-              <ion-item>
-                 <ion-label position="floating">
-                    <ion-icon name="calendar-outline"></ion-icon>
-                    Fecha
-                 </ion-label>
-                <ion-input
-                  required
+
+               <ion-input
+                type="hidden"
+                formControlName ="userName"
+                [(ngModel)]="userName">
+               </ion-input>
+   
+               <ion-item>
+                  <ion-label position="floating">
+                     <ion-icon name="calendar-outline"></ion-icon>
+                     Fecha
+                  </ion-label>
+                  <ion-input
+                   required
                    type="date"
                    name="fecha"
                    formControlName="fecha">
-                </ion-input>
-             </ion-item>
-     
-                <ion-item>
+                  </ion-input>
+               </ion-item>
+      
+               <ion-item>
                   <ion-label position="floating">
-                     Nombre del técnico
+                     Seleccionar técnico
                   </ion-label>
-                   <ion-input
-                     required
-                      type="name"
-                      name="nombreTecnico"
-                      formControlName="nombreTecnico">
-                </ion-input>
-                </ion-item>
-          
-                <ion-item>
+                  <ion-select formControlName="nombreTecnico">
+                     <ion-select-option *ngFor="let technician of techniciansList">{{technician.name}}</ion-select-option>
+                  </ion-select>
+                  <!-- <ion-input
+                   required
+                   type="name"
+                   name="nombreTecnico"
+                   formControlName="nombreTecnico">
+                  </ion-input> -->
+               </ion-item>
+            
+               <ion-item>
                   <ion-label position="floating">
                      Nombre del cliente
                   </ion-label>
-                   <ion-input
-                     required
-                      type="name"
-                      name="nombreCliente"
-                      formControlName="nombreCliente">
-                   </ion-input>
-                </ion-item>
-          
-                <ion-item>
+                  <ion-input
+                   required
+                   type="name"
+                   name="nombreCliente"
+                   formControlName="nombreCliente">
+                  </ion-input>
+               </ion-item>
+         
+               <ion-item>
                   <ion-label position="floating">
                      Cedula del cliente
                   </ion-label>
-                   <ion-input
-                     required
-                      name="cedulaCliente"
-                      formControlName="cedulaCliente">
-                   </ion-input>
-                </ion-item>
-          
-                <ion-item>
+                  <ion-input
+                   required
+                   name="cedulaCliente"
+                   formControlName="cedulaCliente">
+                  </ion-input>
+               </ion-item>
+         
+               <ion-item>
                   <ion-label position="floating">
                      Servicio
                   </ion-label>
-                   <ion-input
-                     required
-                      type="text"
-                      name="servicio"
-                      formControlName="servicio">
-                   </ion-input>
-                </ion-item>
-                
-                <ion-item>
+                  <ion-input
+                   required
+                   type="text"
+                   name="servicio"
+                   formControlName="servicio">
+                  </ion-input>
+               </ion-item>
+               
+               <ion-item>
                   <ion-label position="floating">
                      Especificaciones del servicio
                   </ion-label>
-                   <ion-input
-                     required
-                      type="text"
-                      name="producto"
-                      formControlName="producto">
-                   </ion-input>
-                </ion-item>
-                
-                <ion-item>
+                  <ion-input
+                   required
+                   type="text"
+                   name="producto"
+                   formControlName="producto">
+                  </ion-input>
+               </ion-item>
+               
+               <ion-item>
                   <ion-label position="floating">
                      Direccion
                   </ion-label>
-                   <ion-input
-                     required
-                     name="direccion"
-                     formControlName="direccion">
-                   </ion-input>
-                </ion-item>
-          
-                <ion-item>
+                  <ion-input
+                   required
+                   name="direccion"
+                   formControlName="direccion">
+                  </ion-input>
+               </ion-item>
+            
+               <ion-item>
                   <input ngx-google-places-autocomplete [options]='options' #placesRef="ngx-places" (onAddressChange)="handleAddressChange($event)"/>
-                </ion-item>
+               </ion-item>
 
-                <ion-item>
+               <ion-item>
                   <ion-label position="floating">
                      Precio
                   </ion-label>
-                   <ion-input
-                     required
-                      type="number"
-                      name="precio"
-                      formControlName="precio">
-                   </ion-input>
-                </ion-item>
-                
-                   <ion-button type="onSubmit()">Agregar registro</ion-button>
-                   <ion-button (click)="resetForm(registroService.form)">Reset</ion-button>
+                  <ion-input
+                   required
+                   type="number"
+                   name="precio"
+                   formControlName="precio">
+                  </ion-input>
+               </ion-item>
+               
+               <ion-button type="onSubmit()">Agregar registro</ion-button>
+               <ion-button (click)="resetForm(registroService.form)">Reset</ion-button>
              
-             </form>
-          </ion-col>
-       </ion-row>
-     </ion-grid>
- 
+            </form>
+         </ion-col>
+      </ion-row>
+   </ion-grid>
  </div>
 </ion-content>
+
+<ion-footer>
+   <ion-grid>
+      <ion-row>
+         <ion-col size-sm="12" size="12" class="ion-text-center">
+            <ion-button ion-button expand="full" class="ion-text-wrap min-max-width" type="onSubmit()">Save</ion-button>
+         </ion-col>
+      </ion-row>
+   </ion-grid>
+</ion-footer>
