--- a/src/app/platform/inventario/inventario.page.html
+++ b/src/app/platform/inventario/inventario.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>inventario</ion-title>
   </ion-toolbar>
@@ -97,4 +97,4 @@
     </ion-item>
   
   </div>
-</ion-content>
+</ion-content> -->
